@@ -4,8 +4,8 @@ import org.junit.jupiter.params.converter.ArgumentConversionException;
 import org.junit.jupiter.params.converter.TypedArgumentConverter;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StringToRollArgumentConverter extends TypedArgumentConverter<String, Roll> {
     protected StringToRollArgumentConverter() {
@@ -14,12 +14,10 @@ public class StringToRollArgumentConverter extends TypedArgumentConverter<String
 
     @Override
     protected Roll convert(String source) throws ArgumentConversionException {
-        if (source == null) {
-            return null;
-        } else if (source.isEmpty()) {
-            return new Roll(null);
+        if (source == null || source.isBlank()) {
+            return new Roll(Collections.emptyList());
         } else {
-            List<Integer> dice = Arrays.stream(source.split("\\|")).map(String::trim).map(Integer::valueOf).collect(Collectors.toList());
+            List<Integer> dice = Arrays.stream(source.split("\\|")).map(String::trim).map(Integer::valueOf).toList();
             return new Roll(dice);
         }
     }
